
    Corrected an erroneous compiler warning when reporting referenced but
    unknown objects when using the {Object}::Message notation. Thanks to
    Parker Jones for the bug report.

    Corrected a bug in the <</2 control construct where errors would be
    reported without an error/3 wrapper. Thanks to Parker Jones for the
    bug report.

    Updated the SWI-Prolog and YAP config files in order to recognize and
    compile the proprietary directive create_prolog_flag/3.

    Updated the ECLiPSe config files to treat numbervars/3 as a built-in
    predicate.

    Updated the file system utility predicates in the XSB config file in
    order to ensure full expansion of paths into full paths.

    Updated the CxProlog config file to workaround a wrong priority for the
    standard **/2 operator ("xfx" instead of "xfy"). Updated the CxProlog
    integration scripts for both POSIX and Windows systems in order to use
    the "--script" command-line option, thus freeing the "--goal" option.

    Added a logtalk_library_path/2 entry for the library "home" (the user
    home directory) when running on Windows operating-systems. However, 
    this definition only works for some back-end Prolog compilers due to
    bugs in expanding paths containing more than one environment variable.

    Updated the "types_loader.lgt" library loader file in order to load the
    "rbtree" library object.

    Updated the library object "term" in order to implement the variant/2
    predicate as a call to the =@=/2 proprietary built-in predicate when 
    using either SWI-Prolog or YAP as the back-end Prolog compilers. 

    Corrected a predicate property name bug (alias/1 instead of alias_of/1)
    in the library object "listing".

    Replaced the library object "lgtunit" with a new version supporting three
    different dialects for specifying unit tests. See the example "testing"
    and the library file "lgtuint.txt" for details.
